@@ -1,3 +1,8 @@
+2006-12-04  Jeff Hobbs  <jeffh@ActiveState.com>
+
+	* generic/tkListbox.c (ConfigureListboxItem): ListboxWorldChanged
+	not needed - just call EventuallyRedrawRange. [Bug 1608046] (rezic)
+
 2006-12-01  Jeff Hobbs  <jeffh@ActiveState.com>
 
 	* doc/wm.n, tests/winWm.test:
